# geometric-alg-codegen

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  generate.ps1
.github/workflows/: actions.yml  rust.yml
codegen/: Cargo.toml
codegen/src/: algebra.rs  ast.rs  lib.rs  main.rs  syntax.rs
codegen/src/syntax/: glsl.rs  mod.rs  rust.rs  wgsl.rs
examples/: generate.rs
geometric-alg/: Cargo.toml
geometric-alg/src/: lib.rs  rust.rs  traits.rs
geometric-alg/src/algebra/: ppga1d.txt  ppga3d.txt
geometric-alg/src/glsl/: epga1d.glsl  epga2d.glsl  epga3d.glsl  hpga1d.glsl  hpga2d.glsl  hpga3d.glsl  ppga1d.glsl  ppga2d.glsl  ppga3d.glsl
geometric-alg/src/rust/: epga1d.rs  epga2d.rs  epga3d.rs  hpga1d.rs  hpga2d.rs  hpga3d.rs  ppga1d.rs  ppga2d.rs  ppga3d.rs
geometric-alg/src/wgsl/: epga1d.wgsl  epga2d.wgsl  epga3d.wgsl  hpga1d.wgsl  hpga2d.wgsl  hpga3d.wgsl  ppga1d.wgsl  ppga2d.wgsl  ppga3d.wgsl
scripts/: generate.ps1  generate.sh
scripts/algebra/: epga1d.txt  epga3d.txt  hpga1d.txt  ppga2d.txt
src/: algebra.rs  ast.rs  epga3d.rs  lib.rs  lib_.rs  traits.rs
src/algebra/: epga2d.txt  hpga2d.txt  hpga3d.txt
src/emitter/: glsl.rs  mod.rs  rust.rs  wgsl.rs
src/glsl/: epga1d.glsl  epga2d.glsl  epga3d.glsl  hpga1d.glsl  hpga2d.glsl  hpga3d.glsl  ppga1d.glsl  ppga2d.glsl  ppga3d.glsl
src/rust/: epga1d.rs  epga2d.rs  epga3d.rs  hpga1d.rs  hpga2d.rs  hpga3d.rs  ppga1d.rs  ppga2d.rs  ppga3d.rs
src/syntax/: glsl.rs  mod.rs  rust.rs  wgsl.rs
src/wgsl/: epga1d.wgsl  epga2d.wgsl  epga3d.wgsl  hpga1d.wgsl  hpga2d.wgsl  hpga3d.wgsl  ppga1d.wgsl  ppga2d.wgsl  ppga3d.wgsl
