[workspace]
resolver = "3"
members = [
    ".",
    "codegen",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["YishiMichael (GitHub)"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/YishiMichael/geometric-alg-codegen"
repository = "https://github.com/YishiMichael/geometric-alg-codegen"
keywords = []
categories = []

[package]
name = "geometric-alg"
description = "Generated geometric algebra library"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
