[package]
name = "geometric-alg-codegen"
description = "Generate geometric algebra library code"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies.indexmap]
version = "2.13.0"

[dependencies.itertools]
version = "0.14.0"

[dependencies.strum]
version = "0.27.2"
features = ["derive"]
