[package]
name = "geometric-alg-codegen"
publish = false
edition = "2024"

[dependencies.clap]
version = "4.5.60"
features = ["derive"]

[dependencies.clap-stdin]
version = "0.8.1"

[dependencies.indexmap]
version = "2.13.0"

[dependencies.itertools]
version = "0.14.0"

[dependencies.strum]
version = "0.27.2"
features = ["derive"]

[dependencies.winnow]
version = "0.7.14"
